campusmarket/backend/k8s/admin-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: campustrade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
        - name: admin-service
          image: praisesn/admin-service:latest
          ports:
            - containerPort: 3005
          livenessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: campustrade
spec:
  selector:
    app: admin-service
  ports:
    - port: 3005
      targetPort: 3005
  type: ClusterIP
